<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_workout_selection_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="2"
    tools:context="com.example.matthew.rehabrevamped.Activities.WorkoutSelectionScreenManual">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/pickupcupchoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignWithParentIfMissing="false"
                android:layout_margin="20dp"
                android:background="@android:color/holo_blue_bright"
                android:text="@string/verticle_pick_up_cup" />

            <Button
                android:id="@+id/horizontalpickupcupchoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/pickupcupchoice"
                android:layout_margin="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/holo_orange_light"
                android:text="@string/horizontal_pick_up_cup" />

            <Button
                android:id="@+id/twistcupchoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/horizontalpickupcupchoice"
                android:layout_margin="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/holo_green_light"
                android:text="@string/twist_cup" />
            <Button
                android:id="@+id/phonenumberchoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/twistcupchoice"
                android:layout_margin="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/holo_green_dark"
                android:text="@string/phone_number" />

            <Button
                android:id="@+id/walkchoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/phonenumberchoice"
                android:layout_margin="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/holo_purple"
                android:text="@string/walk_with_phone" />

            <Button
                android:id="@+id/unlockchoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/walkchoice"
                android:layout_margin="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/holo_red_dark"
                android:text="@string/key_unlock" />

            <Button
                android:id="@+id/PourSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/unlockchoice"
                android:layout_margin="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/pour"
                android:background="@android:color/holo_blue_dark"
                />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp"
                android:background="?android:attr/colorPressedHighlight"
                android:text="@string/button"
                android:visibility="invisible" />

            <View
                android:id="@+id/fakeView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerInParent="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/workoutchoicelefthand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignStart="@+id/PourSelect"
                    android:layout_toStartOf="@+id/workoutchoicerighthand"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:text="@string/left_hand"
                    android:textSize="36sp" />

                <Button
                    android:id="@+id/workoutchoicerighthand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/fakeView"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:text="@string/right_hand"
                    android:textSize="36sp" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
